CON-104-story(people): enable admin to add user to converge - add css styles to fix alignment issues [Delivers CON-104]

--- a/src/assets/styles/peopleList.scss
+++ b/src/assets/styles/peopleList.scss
@@ -27,19 +27,18 @@
   }
 
   .action-menu {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column;
 
     .people-header {
-      grid-column: 2/3;
-      align-self: baseline;
-      justify-self: center;
+      text-align: center;
       color: map-get($color-black, 900);
       font-size: 24px;
       line-height: 31px;
       margin-bottom: 10px;
     }
     .add-new-person {
+      width: 100%;
       border-radius: 4px;
       margin: 10px auto;
       background-color: $color-resource;
@@ -62,6 +61,9 @@
       .modal-component .modal_content {
         overflow: scroll;
       }
+    }
+    .sort-people {
+      align-self: flex-end;
     }
   }
 
